Fix for FB share plugin overflow

--- a/bootstrap-starter/style.css
+++ b/bootstrap-starter/style.css
@@ -877,6 +877,13 @@ footer#colophon a {
 .site-content {
   min-height: calc(100vh - 185px);
 }
+element.style {
+  max-height: 369px;
+  border-bottom-width: 1px;
+}
+._2lqg {
+  overflow-y: visible !important;
+}
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
