--- a/less/theme/misc.less
+++ b/less/theme/misc.less
@@ -17,3 +17,11 @@
 .site-content{
 	min-height: ~"calc(100vh - 185px)";
 }
+
+element.style {
+    max-height: 369px;
+    border-bottom-width: 1px;
+}
+._2lqg {
+   overflow-y: visible !important;
+}
